# engineering-workbench

./: .gitignore  CHANGELOG.md  README.md  VENDORING.md  app.py  core.py  product_theme.py  pytest.ini  requirements.txt  theme.py
.github/workflows/: ci.yml
apps/esp-failure-risk-agent/: .gitignore  README.md
apps/production-engineer-copilot/: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
apps/well-gas-lift-advisor/: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
apps/well-gas-lift-advisor/.github/workflows/: ci.yml
apps/well-gas-lift-advisor/data/synthetic/: generate_fleet.py  ground_truth.csv
apps/well-gas-lift-advisor/data/synthetic/fleet/: well_001.csv  well_002.csv  well_003.csv  well_004.csv  well_005.csv  well_006.csv  well_007.csv  well_008.csv  well_009.csv  well_010.csv  well_011.csv  well_012.csv  well_013.csv  well_014.csv  well_015.csv  well_016.csv  well_017.csv  well_018.csv  well_019.csv  well_020.csv
apps/well-gas-lift-advisor/demo/: app.py
apps/well-gas-lift-advisor/evals/: optimization_accuracy.py
apps/well-gas-lift-advisor/src/: __init__.py  glpc.py
apps/well-gas-lift-advisor/tests/: test_app_smoke.py  test_glpc.py
apps/well-performance-studio/: CHANGELOG.md  README.md  requirements.txt
tests/: test_app.py  test_core.py
views/: __init__.py  _common.py  ai_well_review.py  case_file.py  data_sources.py  decline_eur.py  failure_risk.py  gas_lift_optimum.py  injection_allocation.py  lift_design.py  nodal_analysis.py  pvt_type_curves.py  run_life.py  well_browser.py
(+253 files in other folders)
