[project]
name = "well-gas-lift-advisor"
version = "0.1.0"
description = "Gas-lift injection optimization for the Upstream Copilot Suite"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Eric Diaz II", email = "diaz.a.eric1@gmail.com"}]
license = {text = "MIT"}
dependencies = [
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
]

[project.optional-dependencies]
demo = ["streamlit>=1.31.0", "plotly>=5.18.0"]
dev = ["pytest>=8.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
